--- a/my-blog.css
+++ b/my-blog.css
@@ -151,7 +151,7 @@ h2{
 
 #p3{
     margin: auto;
-    line-height: 30px;
+    line-height: 50px;
     color:black;
     font-size: 30px;
     font-family: "楷体";
@@ -161,6 +161,7 @@ h2{
     height: auto;
     border-radius: 15px;
     margin-top: 20px;
+    margin-bottom: 20px
 }
 
 #img4{
@@ -172,3 +173,19 @@ h2{
     margin-left: 10px;
     margin-top: 10px;
 }
+
+#img5{
+    margin: auto;
+    z-index: 9999;
+    height: 50%;
+    width: 30%;
+    border-radius: 15px;
+    margin-left: 10px;
+    margin-top: 10px;
+    display: block;
+    margin: 12px auto;
+    max-width: 90%;
+    height: auto;
+    border-radius: 8px;
+}
+
